youfull/objects/Market_Tag_Label__c.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>API Name of the Market Tag field, name should be same as in the genealogy SOQL</description>
        <inlineHelpText>API Name of the Market Tag field, name should be same as in the genealogy SOQL</inlineHelpText>
        <label>Field API Name</label>
        <picklist>
            <picklistValues>
                <fullName>Contact_Key__r.DETL_CNTCT_MRKT_TAG_1_AMT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact_Key__r.DETL_CNTCT_MRKT_TAG_2_NR__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact_Key__r.DETL_CNTCT_MRKT_TAG_3_PCT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact_Key__r.DETL_CNTCT_MRKT_TAG_4_TXT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRSNL_MRKT_TAG_1_CNT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRSNL_MRKT_TAG_2_AMT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership_Summary_Key__r.GRP_MRKT_TAG_1_CNT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership_Summary_Key__r.GRP_MRKT_TAG_2_AMT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRSNL_MRKT_TAG_3_TXT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRP_MRKT_TAG_3_TXT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal_Performance_Key__r.PRSNL_MRKT_TAG_1_CNT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal_Performance_Key__r.PRSNL_MRKT_TAG_2_AMT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal_Performance_Key__r.PRSNL_MRKT_TAG_3_TXT__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT_ACCT_KEY__r.DETL_CNTCT_MRKT_TAG_4_TXT__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Market Tag Label</relationshipLabel>
        <relationshipName>Market_Tag_Label</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject_Area__c</fullName>
        <label>Subject Area</label>
        <picklist>
            <picklistValues>
                <fullName>Ldr-My Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ldr-Downline Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ldr-Downline Perf. Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ldr-Downline Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone-Market Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone-Ldr Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone-Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ldr-Current Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YOU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tag_Label__c</fullName>
        <label>Tag Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Name__c</fullName>
        <label>Tag Name</label>
        <picklist>
            <picklistValues>
                <fullName>1st Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Representatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Award Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Order with Multiples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Award Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Award Sales - Below Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures Not Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstration Items Not Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnings Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Award Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership Earnings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 5</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Market Tag Label</label>
    <nameField>
        <displayFormat>MKTLBL{000000}</displayFormat>
        <label>Market Tag Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Tag Label</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>